Banner bg added

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -8,6 +8,14 @@
     overflow: hidden;
 }
 
+.banner {
+   background-image: url(../images/bg.jpg);
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   min-height: 540px;
+}
+
 .content-area {
     width: 80%;
     float: left;
